<?xml version="1.0"?>
<package>
  <name>silbot3_avatar</name>
  <version>0.1.0</version>
  <description>The silbot3_avatar package</description>

 <maintainer email="robocare@robocare.co.kr">robocare</maintainer>
  <author>robocare</author>
  <license>ROBOCARE</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>silbot3_common_tools</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>silbot3_common_tools</run_depend>
  <run_depend>tinyxml</run_depend>

  <export>
  </export>
</package>
