<?xml version="1.0"?>
<package format="2">
  <name>silbot3_common_tools</name>
  <version>0.1.0</version>
  <description>The silbot3_common_tools package</description>

  <maintainer email="robocare@robocare.co.kr">robocare</maintainer>
  <license>ROBOCARE</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>silbot3_msgs</depend>

<!--
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>silbot3_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>silbot3_msgs</run_depend>
-->

  <export>
  </export>
</package>
