<?xml version="1.0"?>
<package>
  <name>silbot3_navigation</name>
  <version>0.0.0</version>
  <description>The silbot3_navigation package</description>

  <maintainer email="robocare@todo.todo">robocare</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>silbot3_common_tools</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>silbot3_common_tools</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
</package>